Adding search icons to search inputs

--- a/front-end/src/app/shared/partials/form-sidebar/form-sidebar.component.html
+++ b/front-end/src/app/shared/partials/form-sidebar/form-sidebar.component.html
@@ -5,6 +5,7 @@
   </header>
   <section>
     <div class="search-field" *ngIf="searchField">
+      <i class="search-icon" aria-hidden="true"></i>
       <input
         type="{{ searchField.type }}"
         name="{{ searchField.name }}"
