--- a/front-end/src/app/forms/dynamic-forms/dynamic-forms.component.html
+++ b/front-end/src/app/forms/dynamic-forms/dynamic-forms.component.html
@@ -1,12 +1,13 @@
 <div
   class="forms__wizard"
-  *ngIf="!loadingSteps && !loadingCategories && !loadingSearchField"
+  *ngIf="!loadingSteps && !loadingCategories && !loadingSearchField && !loadingCashOnHand"
 >
 	<div class="form__sidebar">
      <form-sidebar
       title="Transaction Categories"
       [sidebarLinks]="sidebarLinks"
       [searchField]="searchField"
+      [cashOnHand]="cashOnHand"
       (status)='onNotify($event)'
      ></form-sidebar>
   </div>
