--- a/front-end/src/app/forms/dynamic-forms/dynamic-forms.component.scss
+++ b/front-end/src/app/forms/dynamic-forms/dynamic-forms.component.scss
@@ -12,6 +12,7 @@
     flex-grow: 1;
   	display: none;
   	padding-left: 0;
+    padding-bottom: 10px;
   	@include media(tablet) {
   		display: none;
   	}
@@ -42,7 +43,7 @@
       min-height: 100vh;
       width: 76%;
     }
-    main {
+    section {
       .form-content {
         .options-list {
           list-style-type: none;
@@ -59,5 +60,10 @@
         }
       }
     }
-   } // .form__container
+    footer {
+      div {
+        margin-top: 15px;
+      }
+    }
+  } // .form__container
 }
