--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.html
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.html
@@ -27,15 +27,23 @@
             ></i>            
           </div>
         </div>
-        <div class="sidebar__nav--links">
-          <ul class="links-list">
-            <li class="links-list__item">
+        <div class="sidebar__nav--links"  >
+          <ul class="links-list" *ngFor="let committee_form of committee_forms || async">
+            <li class="links-list__item" *ngIf="(committee_form.category === 'My Forms')" > 
               <div class="list-item__link">
-                PAC &amp; Party Report of Receipts &amp; Disbursements (F3X)
+                <!--PAC &amp; Party Report of Receipts &amp; Disbursements (F3X) -->
+                <a
+                  [routerLink]="['/forms/form/', committee_form.form_type_mini]"
+                  [queryParams]="{ step: 'step_1' }"
+                  (click)="formSelected(committee_form.form_type_mini)"
+                >
+                {{committee_form.form_description}}
+                {{committee_form.due_date}}
+                </a> 
               </div>
               <div class="list-item__info">
                 <div class="form-name">
-                  F3X
+                  {{committee_form.form_type}}
                 </div>
                  <button 
                    type="button" 
@@ -51,42 +59,12 @@
                    <span class="sr-only">Click here for more information</span>
                  </button>
                 <ng-template #f3xContent>
-                  Used by PACs and political party committees to report receipts and disbursements. 
-                  <a href="https://www.fec.gov/resources/cms-content/documents/fecfrm3xi.pdf" target="_blank">Instructions</a>.                     
+                  {{committee_form.form_info}} 
+                  <a href= "{{committee_form.form_pdf_url}}"  target="_blank">Instructions</a>.                     
                   <i class="external-link-icon" aria-hidden="true">
                    <span class="sr-only">Link opens in new window.</span>
                   </i>                  
                 </ng-template>                
-              </div>
-            </li>
-            <li class="links-list__item">
-              <div class="list-item__link">
-                Report of Contributors Bundled (F3L)
-              </div>
-              <div class="list-item__info">
-                <div class="form-name">
-                  F3L
-                </div>
-                 <button                 
-                   type="button" 
-                   class="btn btn-link"
-                   [ngbTooltip]="f3lContent"
-                   #f3LtoolTip="ngbTooltip"
-                   (click)="toggleToolTip(f3LtoolTip)"
-                   triggers="manual"
-                   tooltipClass="sidebar-tooltip"
-                   placement="{{ tooltipPosition }}"
-                 >
-                   <i class="info-icon" aria-hidden="true"></i>
-                   <span class="sr-only">Click here for more information</span>
-                 </button>
-                <ng-template #f3lContent>
-                 Used by committees to report bundled contributions forwarded by or credited to lobbyists, registrants and their PACs. 
-                 <a href="https://www.fec.gov/resources/cms-content/documents/fecfrm3li.pdf" target="_blank">Instructions</a>.    
-                 <i class="external-link-icon" aria-hidden="true">
-                   <span class="sr-only">Link opens in new window.</span>
-                 </i>                 
-                </ng-template>                  
               </div>
             </li>
           </ul>
@@ -111,25 +89,25 @@
           </button>
         </div>
         <div class="sidebar__nav--links" [ngClass]="{'d-none': otherFormsHidden === true}">
-          <ul class="links-list">
-            <li class="links-list__item" [ngClass]="formType === 99 ? 'links-list__item--selected' : ''">
-              <div class="list-item__link">
+          <ul class="links-list" *ngFor="let committee_form of committee_forms || async" >
+            <li class="links-list__item" *ngIf="(committee_form.category === 'Other Forms')" [ngClass]="formType === 99 ? 'links-list__item--selected' : ''">
+              <div class="list-item__link" >
                 <a
-                  [routerLink]="['/forms/form/', '99']"
+                  [routerLink]="['/forms/form/', committee_form.form_type_mini]"
                   [queryParams]="{ step: 'step_1' }"
-                  (click)="formSelected(99)"
+                  (click)="formSelected(committee_form.form_type_mini)"
                 >
-                  Miscellaneous Report to the FEC (F99)
+                {{committee_form.form_description}}
                 </a>                
               </div>
               <div class="list-item__info">
                 <div class="form-name">
                   <a
-                    [routerLink]="['/forms/form/', '99']"
+                    [routerLink]="['/forms/form/', committee_form.form_type_mini]"
                     [queryParams]="{ step: 'step_1' }"
-                    (click)="formSelected(99)"
+                    (click)="formSelected(committee_form.form_type_mini)"
                   >                  
-                    F99
+                  {{committee_form.form_type}}
                   </a>
                 </div>
                  <button 
@@ -146,7 +124,7 @@
                    <span class="sr-only">Click here for more information</span>
                  </button>
                 <ng-template #f99Content>
-                 Used by registered committees or entities filing electronically to submit a letter. 
+                  {{committee_form.form_info}} 
                 </ng-template>                                    
               </div>
             </li>
