--- a/front-end/src/app/forms/dynamic-forms/dynamic-forms.component.html
+++ b/front-end/src/app/forms/dynamic-forms/dynamic-forms.component.html
@@ -12,61 +12,75 @@
      ></form-sidebar>
   </div>
 	<div class="form__container">
-    <header>
-      <app-steps
-        [steps]="steps"
-        current_step="step_1"
-      ></app-steps>
-    </header>
-    <section>
-      <div class="form-content">
-        <form>
-          <ul class="options-list">
-            <li
-              class="options-list__item"
-              *ngFor="let option of selectedOptions"
-            >
-              <input
-                type="{{ option?.type }}"
-                name="{{ option?.name }}"
-                id="{{ option?.value }}"
-                class="option-radio"
-                value="{{ option?.value }}"
-              />
-              <label
-                for="{{ option?.value }}"
-              >
-                {{ option?.text }}
-              </label>
-              <button
-                type="button"
-                class="btn-info"
-                ngbTooltip="{{ option?.info }}"
-                *ngIf="option.infoIcon"
-              >
-                <i class="info-icon" aria-hidden="true"></i>
-                <span class="sr-only">
-                  Click for more information
-                </span>
-              </button>
-            </li>
-          </ul>
-        </form>
-      </div>
-    </section>
-    <footer>
-      <div class="grid-row" *ngIf="formOptionsVisible">
-        <div class="grid-row__col grid-row__col--11">
-            <div class="forms__btn-container">
-              <button
-                class="btn btn-primary btn-right"
-                type="submit"
-              >
-                Next
-              </button>
+    <form
+      [formGroup]="frmOption"
+      (ngSubmit)="doValidateOption()"
+      (blur)="doValidateOption()"
+    >
+      <header>
+        <app-steps
+          [steps]="steps"
+          current_step="step_1"
+        ></app-steps>
+      </header>
+      <section>
+        <div class="form-content">
+          <div class="grid-row">
+            <div class="grid-row__col grid-row__col--12">
+              <div class="text-error text-center"
+                *ngIf="(frmOption.invalid && (frmOption.dirty || frmOption.touched)) || (optionFailed)">
+                You must select a transaction type.
+              </div>
             </div>
+          </div>
+            <ul class="options-list">
+              <li
+                class="options-list__item"
+                *ngFor="let option of selectedOptions"
+              >
+                <input
+                  type="{{ option?.type }}"
+                  name="{{ option?.name }}"
+                  id="{{ option?.value }}"
+                  class="option-radio"
+                  value="{{ option?.value }}"
+                  (click)="updateStatus($event)"
+                  formControlName="optionRadio"
+                />
+                <label
+                  for="{{ option?.value }}"
+                >
+                  {{ option?.text }}
+                </label>
+                <button
+                  type="button"
+                  class="btn-info"
+                  ngbTooltip="{{ option?.info }}"
+                  *ngIf="option.infoIcon"
+                >
+                  <i class="info-icon" aria-hidden="true"></i>
+                  <span class="sr-only">
+                    Click for more information
+                  </span>
+                </button>
+              </li>
+            </ul>
         </div>
-      </div>
-    </footer>
+      </section>
+      <footer>
+        <div class="grid-row" *ngIf="formOptionsVisible">
+          <div class="grid-row__col grid-row__col--11">
+              <div class="forms__btn-container">
+                <button
+                  class="btn btn-primary btn-right"
+                  type="submit"
+                >
+                  Next
+                </button>
+              </div>
+          </div>
+        </div>
+      </footer>
+    </form>
 	</div> <!-- ./form-contaner -->
 </div> <!-- ./forms-wizard -->
