--- a/front-end/src/app/forms/dynamic-forms/dynamic-forms.component.html
+++ b/front-end/src/app/forms/dynamic-forms/dynamic-forms.component.html
@@ -1,6 +1,6 @@
 <div
   class="forms__wizard"
-  *ngIf="!loadingSteps && !loadingCategories && !loadingSearchField && !loadingCashOnHand"
+  *ngIf="!loadingData"
 >
 	<div class="form__sidebar">
      <form-sidebar
