--- a/front-end/src/app/forms/forms.component.html
+++ b/front-end/src/app/forms/forms.component.html
@@ -5,7 +5,7 @@
       <app-form-99></app-form-99>
     </div>
     <div *ngIf="form_type === '3X'">
-    	<dynamic-forms></dynamic-forms>
+    	<app-f3x></app-f3x>
     </div>
   </div>
 </div>
